samples/_failures_safe/1761257876_6fa3d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e7aa7f4.c: In function ‘main’:
./samples/SAFE/__tmp_4e7aa7f4.c:133:5: error: expected declaration or statement at end of input
  133 |     if (!add_compression_block(&ctx, sample_data1, sizeof(sample_data1))) {
      |     ^~
./samples/SAFE/__tmp_4e7aa7f4.c:133:5: error: expected declaration or statement at end of input
